View documents containing question mark characters

Construct a QUrl with the static method 'fromUserInput' to tolerate
characters like question marks as part of (local) file's name.

BUG: 401553
FIXED-IN: 0.9.2